fixed spacing on front page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -173,27 +173,27 @@ a.secret {
 div.about {
     border: solid 1px $pop-1;
     width: 90%;
-    background-image: url('/assets/png/code_example2_pink.png')
+    background-image: url('/assets/png/code_example2_pink.png');
 }
 div.writings {
     border: solid 1px $pop-2;
     width: 90%;
-    background-image: url('/assets/png/code_example2_pink.png')
+    background-image: url('/assets/png/code_example2_pink.png');
 }
 div.code {
     border: solid 1px $pop-3;
     width: 90%;
-    background-image: url('/assets/png/code_example2_pink.png')
+    background-image: url('/assets/png/code_example2_pink.png');
 }
 div.git {
     border: solid 1px $pop-4;
     width: 90%;
-    background-image: url('/assets/png/code_example2_pink.png')
+    background-image: url('/assets/png/code_example2_pink.png');
 }
 div.favorites {
     border: solid 1px $pop-5;
     width: 90%;
-    background-image: url('/assets/png/code_example2_pink.png')
+    background-image: url('/assets/png/code_example2_pink.png');
 }
 
 
@@ -311,7 +311,7 @@ img.center {
 .fixed{
     width: 30%;
     word-wrap: break-word;
-    margin: 3%;
+    margin: 1.5em;
     border: solid 1px $grey-light;
     margin-left: auto;
     margin-right: auto;
@@ -501,10 +501,10 @@ ul.sidenav li:hover {
 
     .fixed {
         width: 100%;
-        margin-right: 2%;
-        margin-left: 2%;
-        margin-top: 4%;
-        margin-bottom: 4%;
+        margin-right: 0.5em;
+        margin-left: 0.5em;
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
 
     #content {
